--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <!-- body start-->
+    <div class="row"></div>
+    
     <!-- entete start -->
     <div class="row colorMain white-text">
         <div class="col s2 left-align">
