--- a/src/app/components/directives/widgets/agenda/agenda.html
+++ b/src/app/components/directives/widgets/agenda/agenda.html
@@ -1,57 +1,18 @@
 <div class="card colorAccent white-text">
     <div class="card-content colorMain white-text">
-        <i class="fa fa-calendar"></i>
-        {{mainAgenda.next_event  | translate}}
-
-        <span ng-click="removeWidget(widget);" ng-if="!options.hideWidgetClose"><i class="material-icons right">close</i></span>
-        <span ng-click="widget.contentStyle.display = widget.contentStyle.display === 'none' ? 'block' : 'none'">
-            <i class="material-icons right">
-                {{ widget.contentStyle.display ===
-                'none'?'expand_more':''}}{{widget.contentStyle.display !==
-                'none'?'expand_less':''}}
-            </i>
-        </span>
-        <span ng-if="widget.activator"><i class="activator material-icons right">more_vert</i></span>
+        <span class="card-title"><i class="fa fa-calendar"></i> {{'mainAgenda.next_event'  | translate}}</span>
     </div>
-    <div class="container" style="overflow-y: auto; height:250px;">
-
-
-
+    <div class="card-content" style="overflow-y: auto; height:255px;">
         <div ng-repeat="e in events track by $index" class="row">
-            <div class="col s2">
-                <h5 style="line-height: 0.5" class="center-align">{{e.startDate | date : "dd"}}</h5>
+            <div class="col s2" style="padding:10px;">
+                <h5 class="center-align">{{e.startDate | date : "dd"}}</h5>
                 <hr/>
-                <h6 style="line-height: 0.5" class="center-align">{{e.startDate | date : 'MM'}}</h6>
+                <h6 class="center-align">{{e.startDate | date : 'MM'}}</h6>
             </div>
-            <div class="col s10">
-                <h6>{{e.label}}
-                    <small>{{e.title | translate}}</small>
-                </h6>
+            <div class="col s10" style="padding:10px;">
+                <h6>{{e.label}} <small>{{e.title | translate}}</small></h6>
                 {{e.participants.teamHome.label}} / {{e.participants.teamVisitor.label}}
             </div>
         </div>
-    </div>
-
-    <div class="card-reveal">
-        <span class="card-title">
-            <small><i class="fa fa-calendar"></i>
-            {{widget.title  | translate}}
-            <i class="material-icons right">close</i></small></span>
-        <table>
-            <thead>
-            <tr>
-                <th data-field="indicators"></th>
-                <th ng-repeat="p in series track by $index" data-field="{{p}}" class="center-align" ng-bind="p"></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="l in labels track by $index">
-                <td><b ng-bind="l"></b></td>
-                <td ng-repeat="d in data track by $index" data-field="{{d[$parent.$index]}}" class="center-align">
-                    {{d[$parent.$index]}}
-                </td>
-            </tr>
-            </tbody>
-        </table>
     </div>
 </div>
