--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -1,14 +1,13 @@
 <div class="container">
-
-    <!-- space between header menu and body-->
+<!-- body start-->
     <div class="row"></div>
     
     <div class="row">
-        <div class="col s12 l5" style="margin-top:15px;">
+        <div class="col s12 l5">
             <widget-notifications meta="meta" user="user"/>
         </div>
         
-        <div class="col s12 l7" style="margin-top:15px;">
+        <div class="col s12 l7">
             <widget-podium meta="meta" user="user" indicator="goalScored" nbitem="3" stataggregat="COUNT"/>
         </div>
     
