Impact suppression sb-config : tous les main + module Agenda

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -68,16 +68,16 @@
                         <span class="hide-on-med-and-down" translate="headerMenu.dashboard"></span></a>
                     </li>
 
-                    <li class="left"><a href="#/private/players/{{user.effectiveDefault}}"><i
+                    <li class="left"><a href="#/private/players/{{meta.sandbox.effectiveDefault}}"><i
                             class="material-icons left">person</i>
                         <span class="hide-on-med-and-down" translate="headerMenu.players"></span></a>
                     </li>
 
-                    <li class="left"><a href="#/private/teams/{{user.effectiveDefault}}"><i class="material-icons left">group</i>
+                    <li class="left"><a href="#/private/teams/{{meta.sandbox.effectiveDefault}}"><i class="material-icons left">group</i>
                         <span class="hide-on-med-and-down" translate="headerMenu.teams"></span></a>
                     </li>
 
-                    <li class="left"><a href="#/private/agenda/{{user.effectiveDefault}}"><i class="material-icons left">event_note</i>
+                    <li class="left"><a href="#/private/agenda/{{meta.sandbox.effectiveDefault}}"><i class="material-icons left">event_note</i>
                         <span class="hide-on-med-and-down" translate="headerMenu.calendar"></span></a>
                     </li>
 
@@ -113,19 +113,19 @@
                     <li class="divider"></li>
 
                     <li>
-                        <a href="#/private/players/{{user.effectiveDefault}}" class="white-text light">
+                        <a href="#/private/players/{{meta.sandbox.effectiveDefault}}" class="white-text light">
                             <i class="mdi-social-person left"></i> {{'headerMenu.players' | translate }}
                         </a>
                     </li>
 
                     <li>
-                        <a href="#/private/teams/{{user.effectiveDefault}}" class="white-text light">
+                        <a href="#/private/teams/{{meta.sandbox.effectiveDefault}}" class="white-text light">
                             <i class="mdi-social-group left"></i> {{'headerMenu.teams' | translate }}
                         </a>
                     </li>
 
                     <li>
-                        <a href="#/private/agenda/{{user.effectiveDefault}}" class="white-text light">
+                        <a href="#/private/agenda/{{meta.sandbox.effectiveDefault}}" class="white-text light">
                             <i class="mdi-action-view-agenda left"></i> {{'headerMenu.calendar' | translate }}
                         </a>
                     </li>
