Impact suppression SB-Config : Player + Team + Profil

--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -92,7 +92,7 @@
 
                 <div class="col m4 s12 center-align">
                     <br>
-                    <a href="#/private/addPlayer/{{meta._id}}" class="waves-effect waves-light btn colorAccent">
+                    <a href="#/private/addPlayer/{{meta.sandbox._id}}" class="waves-effect waves-light btn colorAccent">
                         <i class="material-icons">add</i>
                     </a>
 
