--- a/src/app/modules/commons/users/profile/writeProfile.html
+++ b/src/app/modules/commons/users/profile/writeProfile.html
@@ -38,13 +38,8 @@
                 		<!-- Login -->
                 		<div class="row">
 	                		<div class="col s12 input-field">
-	                            <label for="userLogin"> {{'profile.label.nick' | translate }} <span class="red-text text-lighten-1">*</span></label>
-	                            <input type="text" id="userLogin" name="userLogin" class="validate" required ng-model="user.account.login"
-	                                ng-class="{ 'invalid': profileForm.userLogin.$invalid }"/>
-	
-	                            <span ng-class="{'has-error': profileForm.userLogin.$dirty && profileForm.userLogin.$error.required}"
-	                                ng-hide="profileForm.userLogin.$valid" class="small red-text text-lighten-1"
-	                                translate="profile.message.userLogin.required"></span>
+	                            <label for="userLogin"> {{'profile.label.nick' | translate }}</label>
+	                            <input disabled type="text" id="userLogin" name="userLogin" ng-model="user.account.login"/>
 	                        </div>
                         </div>
                         
