Evolution Gestion profil et sandbox

--- a/src/app/modules/commons/users/billing/billing.html
+++ b/src/app/modules/commons/users/billing/billing.html
@@ -47,7 +47,7 @@
 
                     <td>
                          <span ng-if="plan.status === 'open' || plan.status === 'notpaid'"><a
-                                 href="#/private/profile/pay/{{$index}}" class="btn btn-s"
+                                 href="#/private/billing/pay/{{$index}}" class="btn btn-s"
                                  translate="profile.label.pay"></a></span>
                         <table class="highlight responsive-table">
                             <thead>
