--- a/src/app/modules/commons/users/mainProfile.html
+++ b/src/app/modules/commons/users/mainProfile.html
@@ -91,9 +91,9 @@
 
                         <div class="col s12">
                             <br/>
-                            <span class="blue-grey-text text-darken-2">
+                            <a href="#/private/inviteMember" class="waves-effect waves-light red-text text- lighten-1">
                                 <i class="material-icons md-48">share</i>
-                            </span>
+                            </a>
                             <br/>
                             {{'profile.tabs.sbSharing' | translate }}
                             <br/>
@@ -102,7 +102,7 @@
                         <div class="col s12 divider"></div>
                         <div class="col s12">
                             <br/>
-                            <a href="#/private/sbMembers" class="waves-effect waves-light red-text text- lighten-1">
+                            <a href="#/private/sbMemberMgnt" class="waves-effect waves-light red-text text- lighten-1">
                                 <i class="material-icons md-48">group</i>
                             </a>
                             <br/>
