--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -1,79 +1,59 @@
 <!-- START PRICING TABLE CONTAINER -->
-<div class="container pricing">
-    <div class="row"></div>
-    <h3 class="center-align" translate="pricing.title"></h3>
-    <h5 class="center-align" translate="pricing.desc"></h5>
-    <div class="row">
-        <div class="col s12 m3 offset-m3">
-            <div class="card z-depth-0 blue lighten-1 white-text">
-                <div class="card-content center-align">
-                    <div class="card-title blue darken-1 white-text"><b translate="pricing.offers.standard.title"></b>
-                    </div>
-                    <div class="price center-align white-text">
-                        <h4>
-                            <span class="amount" translate="pricing.offers.standard.price"></span>
-                            <span class="currency">€</span>
-                        </h4>
-                        <span class="period" translate="pricing.offers.standard.period"></span>
-                        <p translate="pricing.offers.standard.desc"></p>
-                        <a class="btn btn-flat btn-large waves-effect waves-light blue darken-3 white-text"
-                           href="#/signupStart" translate="pricing.subscribe-btn"></a>
-                    </div>
-                </div>
-            </div>
-            <h5 class="blue-text text-darken-1" translate="pricing.offers.standard.detail.title"></h5>
-            <h6 class="blue-text text-darken-1" translate="pricing.offers.standard.detail.sub-title"></h6>
-            <div class="divider blue darken-1"></div>
-            <ul class="left-align">
-                <li translate="pricing.offers.standard.detail.line1"></li>
-                <li translate="pricing.offers.standard.detail.line2"></li>
-                <li translate="pricing.offers.standard.detail.line3"></li>
-                <li translate="pricing.offers.standard.detail.line4"></li>
-                <li translate="pricing.offers.standard.detail.line5"></li>
-                <li translate="pricing.offers.standard.detail.line6"></li>
-            </ul>
-        </div>
-
-        <div class="col s12 m3">
-            <div class="card z-depth-0 colorSecondary white-text">
-                <div class="card-content center-align">
-                    <div class="card-title colorMain white-text"><b
-                            translate="pricing.offers.team.title"></b></div>
-                    <div class="price center-align white-text">
-                        <h4>
-                            <span class="amount" translate="pricing.offers.team.price"></span>
-                            <span class="currency">€</span>
-                        </h4>
-                        <span class="period" translate="pricing.offers.team.period"></span>
-                        <p translate="pricing.offers.team.desc"></p>
-                        <a class="btn btn-flat btn-large waves-effect waves-light light-green darken-2 white-text"
-                           href="javascript:void(0);" translate="pricing.soon-btn"></a>
-                    </div>
-                </div>
-            </div>
-            <h5 class="light-green-text text-darken-1" translate="pricing.offers.team.detail.title"></h5>
-            <h6 class="light-green-text text-darken-1" translate="pricing.offers.team.detail.sub-title"></h6>
-            <div class="divider light-green darken-1"></div>
-            <ul class="left-align">
-                <li translate="pricing.offers.team.detail.line1"></li>
-                <li translate="pricing.offers.team.detail.line2"></li>
-                <li translate="pricing.offers.team.detail.line3"></li>
-                <li translate="pricing.offers.team.detail.line4"></li>
-                <li translate="pricing.offers.team.detail.line5"></li>
-            </ul>
+<div class=" white-text">
+    
+    <div class="row center-align">
+        <div class="col s12">
+            <h3 class=" colorAccent-text" translate="pricing.title"></h3>
+            <h5 translate="pricing.desc"></h5>
         </div>
     </div>
-    <p class="center-align" translate="pricing.team-subscribe"></p>
+    
+    <div class="hero-pricing center-align">
+        <div class="row container">
+            <div class="col s12">
+                <div class="card colorBckgModal">
+                    <div class="card-title colorAccent white-text">
+                        <b translate="pricing.offers.standard.title"></b>
+                    </div>
+                    <div class="card-content">
+                        <div class="price center-align white-text">
+                            <span class="amount" translate="pricing.offers.standard.price"></span>
+                            <span class="currency">€</span><br>
+                            <span class="period" translate="pricing.offers.standard.period"></span><br>
+                            <span translate="pricing.offers.standard.desc"></span>
+
+                        </div>
+                        <h5 class="colorSecondary-text" translate="pricing.offers.standard.detail.title"></h5>
+                        <h6 class="colorSecondary-text" translate="pricing.offers.standard.detail.sub-title"></h6>
+                        <div class="divider colorSecondary"></div>
+                        <ul class="left-align">
+                            <li translate="pricing.offers.standard.detail.line1"></li>
+                            <li translate="pricing.offers.standard.detail.line2"></li>
+                            <li translate="pricing.offers.standard.detail.line3"></li>
+                            <li translate="pricing.offers.standard.detail.line4"></li>
+                            <li translate="pricing.offers.standard.detail.line5"></li>
+                        </ul>
+
+                        <a class="btn btn-flat btn-large waves-effect waves-light colorAccent white-text"
+                           href="#/signupStart" translate="pricing.subscribe-btn">
+                        </a>
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <p class="center-align colorMain-text" translate="pricing.team-subscribe"></p>
 </div>
-<div class="pricing colorAccent white-text">
+<div class="pricing colorSecondary white-text">
     <div class="container center-align">
-        <div class="row valign-middle">
-            <div class="col m6 s12 left-align">
+        <div class="row">
+            <div class="col m6 s12">
                 <h5 translate="pricing.trial.title"></h5>
             </div>
             <div class="col m6 s12 ">
-                <div class="left-align">
-                    <a class="btn btn-flat btn-large waves-effect waves-light white red-text subscribe"
+                <div class="center-align">
+                    <a class="btn btn-flat btn-large waves-effect waves-light white colorAccent-text subscribe"
                        href="#/signupStart" translate="pricing.trial.btn"></a>
                 </div>
             </div>
