--- a/src/app/index.css
+++ b/src/app/index.css
@@ -25,8 +25,12 @@
     font-size: 48px;
 }
 
-.blue-grey-text.text-darken-2 {
+.colorMain-text {
     color: #646464 !important;
+}
+
+.colorAccent-text {
+  color: #ea5350 !important;
 }
 
 .colorMain {
@@ -43,6 +47,12 @@
     background: linear-gradient(10deg, rgba(239, 83, 80, 1), rgba(239, 83, 80, 1));
     overflow: hidden;
 }
+
+.colorBckgModal {
+    background-color: rgba(100, 100, 100, 0.7);
+    overflow: hidden;
+}
+
 
 .cardBckg {
     background: #9e9e9e;
@@ -165,12 +175,22 @@ footer.page-footer {
 }
 
 .hero {
-    background: url("../assets/images/background1.jpg") center 40%;
+    background: url("../assets/images/background1 - 1.jpg") center 40%;
     background-size: cover;
     width: 100%;
     margin-top: -65px;
     padding-top: 10%;
-    min-height: calc(100vh - 194px);
+    min-height: calc(40vh - 194px);
+    height: 100%;
+}
+
+.hero-pricing {
+    background: url("../assets/images/background1%20-%202.jpg") center 40%;
+    background-size: cover;
+    width: 100%;
+    margin-top: -65px;
+    padding-top: 10%;
+    min-height: calc(40vh - 194px);
     height: 100%;
 }
 
@@ -210,7 +230,7 @@ h6.title {
 .top-nav-trans {
     position: relative;
     z-index: 30;
-    background-color: transparent !important;
+    background-color: rgba(100, 100, 100, 0.7);
     box-shadow: none;
 }
 
