--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,16 +1,13 @@
-<div id="index-banner">
+<div id="index-banner" class="colorMain-text">
     <div class="section no-pad-bot hero">
-        <div class="container">
+        <div class="row colorBckgModal white-text center-align">
+            <h1 class="col s12 title" translate="landing.main-title"></h1>
 
-            <div class="center-align">
-                <h1 class="header center white-text text-accent-2 title" translate="landing.main-title"></h1>
+            <h4 class="col s12 title" translate="landing.sub-title" style="margin-bottom: 50px"></h4>
 
-                <h4 class="col s12 white-text title" translate="landing.sub-title"
-                    style="margin-bottom: 50px"></h4>
-
-                <!-- <a class="waves-effect waves-light btn" translate="landing.manual-btn" href="#/how"></a>-->
-            </div>
+            <!-- <a class="waves-effect waves-light btn" translate="landing.manual-btn" href="#/how"></a>-->
         </div>
+        <div class="row">&nbps;</div>
     </div>
 
 
@@ -27,10 +24,10 @@
         <div class="section row describe">
             <div class="col s12 m6 l3">
                 <div class="center">
-                    <div class="red-text text-lighten-1">
-                        <i class="medium material-icons">assessment</i>
+                    <div class="colorAccent-text">
+                        <i class="material-icons large">assessment</i>
                     </div>
-                    <h6 translate="landing.area-3.item-1.title" class="title"></h6>
+                    <h5 translate="landing.area-3.item-1.title" class="title"></h5>
 
                     <p class="light left-align small" translate="landing.area-3.item-1.content"></p>
                 </div>
@@ -38,10 +35,10 @@
 
             <div class="col s12 m6 l3">
                 <div class="center">
-                    <div class="red-text text-lighten-1">
-                        <i class="medium material-icons">store</i>
+                    <div class="colorAccent-text">
+                        <i class="large material-icons">store</i>
                     </div>
-                    <h6 translate="landing.area-3.item-2.title" class="title"></h6>
+                    <h5 translate="landing.area-3.item-2.title" class="title"></h5>
 
                     <p class="light left-align small" translate="landing.area-3.item-2.content"></p>
                 </div>
@@ -52,11 +49,11 @@
 
             <div class="col s12 m6 l3">
                 <div class="center">
-                    <div class="red-text text-lighten-1">
-                        <i class="medium material-icons">stay_current_landscape</i>
+                    <div class="colorAccent-text">
+                        <i class="large material-icons">stay_current_landscape</i>
                     </div>
 
-                    <h6 translate="landing.area-3.item-0.title" class="title"></h6>
+                    <h5 translate="landing.area-3.item-0.title" class="title"></h5>
 
                     <p class="light left-align small" translate="landing.area-3.item-0.content"></p>
                 </div>
@@ -64,69 +61,19 @@
 
             <div class="col s12 m6 l3">
                 <div class="center">
-                    <div class="red-text text-lighten-1">
-                        <i class="medium material-icons">loop</i>
+                    <div class="colorAccent-text">
+                        <i class="large material-icons">loop</i>
                     </div>
-                    <h6 translate="landing.area-3.item-3.title" class="title"></h6>
+                    <h5 translate="landing.area-3.item-3.title" class="title"></h5>
 
                     <p class="light left-align small" translate="landing.area-3.item-3.content"></p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="section">
-            <div class="divider"/>
-        </div>
-    </div>
     
-    <div class="container">
-        <div class="section">
-            <!--   Icon Section   -->
-            <div class="row">
-                <div class="col s12 m4">
-                    <div class="center icon-block">
-                        <a href="mailto:contact@qaobee.com">
-                            <div class="red-text text-lighten-1">
-                                <i class="medium material-icons">email</i>
-                            </div>
-                        </a>
-                        <h5 class="center" translate="landing.contact.email"></h5>
-                    </div>
-                </div>
-
-                <div class="col s12 m4">
-                    <div class="center icon-block">
-                        <a href="https://goo.gl/maps/3Fjoz" target="_blank">
-                            <div class="red-text text-lighten-1">
-                                <i class="medium material-icons">location_on</i>
-                            </div>
-                        </a>
-                        <h5 class="center" translate="landing.contact.visit"></h5>
-                    </div>
-                </div>
-
-                <div class="col s12 m4">
-                    <div class="center icon-block">
-                        <a href="#modalSubMailingList" class="modal-trigger">
-                            <div class="red-text text-lighten-1">
-                                <i class="medium material-icons">feedback</i>
-                            </div>
-                        </a>
-                        <h5 class="center" translate="landing.contact.newsletter">/h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="section">
-            <div class="divider"/>
-        </div>
-    </div>
-        
-    <div class="container">
-        <div class="section">
+    <div class="green lighten-2">
+        <div class="section white-text">
             <h4 class="center-align" translate="landing.area-4.title"></h4>
 
             <h5 class="center-align" translate="landing.area-4.content"></h5>
@@ -140,65 +87,37 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="section">
-        </div>
-    </div>
-    <!-- Modal -->
-    <div id="modalSubMailingList" class="modal">
-        <div class="modal-header center-align ">
-            <h5>
-                <span class="fa fa-sign-in"></span>
-                <span translate="landing.contact.popin.title"></span>
-            </h5>
-        </div>
-        <!-- Begin MailChimp Signup Form -->
+    
+    <div class="colorMain">
+        <div class="section container white-text">
+            <!--   Icon Section   -->
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="center icon-block">
+                        <a href="mailto:contact@qaobee.com">
+                            <div class="colorAccent-text">
+                                <i class="medium material-icons">email</i>
+                            </div>
+                        </a>
+                        <h5 class="center" translate="landing.contact.email"></h5>
+                    </div>
+                </div>
 
-        <div id="mc_embed_signup">
-            <div class="modal-content grey lighten-3 ">
-                <form action="//qaobee.us13.list-manage.com/subscribe/post?u=d55c6a8036c505a3675d0b352&amp;id=883987d33d"
-                      method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
-                      novalidate class="validate">
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <label for="mce-EMAIL" translate="landing.contact.popin.email"></label>
-                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" class="validate"
-                                   required>
-                        </div>
-                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="b_d55c6a8036c505a3675d0b352_883987d33d" tabindex="-1" value="">
-                        </div>
-                        <div id="mce-responses" class="clear">
-                            <div class="response" id="mce-error-response" style="display:none"></div>
-                            <div class="response" id="mce-success-response" style="display:none"></div>
-                        </div>
-                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+
+                <div class="col s12 m6">
+                    <div class="center icon-block">
+                        <a href="#" class="modal-trigger">
+                            <div class="colorAccent-text">
+                                <i class="medium material-icons">feedback</i>
+                            </div>
+                        </a>
+                        <h5 class="center" translate="landing.contact.newsletter">/h5>
                     </div>
-                    <div class="row center">
-                        <div class="col s12">
-                            <a href="#/" class="modal-action modal-close waves-effect waves-red btn red"
-                               translate="commons.buttons.cancel"></a>
-                            <button type="submit" class="btn waves-effect waves-red  green darken-1" value="Subscribe"
-                                    name="subscribe"
-                                    translate="commons.buttons.validate"></button>
-                        </div>
-                    </div>
-                    <script type='text/javascript'
-                            src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-                    <script type='text/javascript'>(function () {
-                        window.fnames = new Array();
-                        window.ftypes = new Array();
-                        fnames[0] = 'EMAIL';
-                        ftypes[0] = 'email';
-                        fnames[1] = 'FNAME';
-                        ftypes[1] = 'text';
-                        fnames[2] = 'LNAME';
-                        ftypes[2] = 'text';
-                    }(jQuery));
-                    var $mcj = jQuery.noConflict(true);</script>
-                </form>
+                </div>
             </div>
         </div>
     </div>
+    
+        
+    
 </div>
