--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -3,7 +3,6 @@
     
     <div class="row center-align">
         <div class="col s12">
-            <h3 class=" colorAccent-text" translate="pricing.title"></h3>
             <h5 translate="pricing.desc"></h5>
         </div>
     </div>
@@ -11,7 +10,7 @@
     <div class="hero-pricing center-align">
         <div class="row container">
             <div class="col s12">
-                <div class="card colorBckgModal">
+                <div class="card colorBckgModal" style="margin-top: -60px;">
                     <div class="card-title colorAccent white-text">
                         <b translate="pricing.offers.standard.title"></b>
                     </div>
@@ -21,12 +20,11 @@
                             <span class="currency">€</span><br>
                             <span class="period" translate="pricing.offers.standard.period"></span><br>
                             <span translate="pricing.offers.standard.desc"></span>
-
+                            <p>&nbsp;</p>
                         </div>
                         <h5 class="colorSecondary-text" translate="pricing.offers.standard.detail.title"></h5>
-                        <h6 class="colorSecondary-text" translate="pricing.offers.standard.detail.sub-title"></h6>
-                        <div class="divider colorSecondary"></div>
-                        <ul class="left-align">
+                        <div class="divider white container"></div>
+                        <ul class="left-align" style="padding-left: 30%;">
                             <li translate="pricing.offers.standard.detail.line1"></li>
                             <li translate="pricing.offers.standard.detail.line2"></li>
                             <li translate="pricing.offers.standard.detail.line3"></li>
