--- a/src/app/modules/public/pricing.html
+++ b/src/app/modules/public/pricing.html
@@ -1,47 +1,11 @@
 <!-- START PRICING TABLE CONTAINER -->
-<div class=" white-text">
-    
-    <div class="row center-align">
-        <div class="col s12">
-            <h5 translate="pricing.desc"></h5>
+<div class="colorMain-text">
+    <div class="section no-pad-bot hero-pricing">
+        <div class="colorBckgModal white-text center-align">
+            <h1 class="title" translate="pricing.title"></h1>
+            <h4 class="title" translate="pricing.desc" style="margin-bottom: 50px"></h4>
         </div>
     </div>
-    
-    <div class="hero-pricing center-align">
-        <div class="row container">
-            <div class="col s12">
-                <div class="card colorBckgModal" style="margin-top: -60px;">
-                    <div class="card-title colorAccent white-text">
-                        <b translate="pricing.offers.standard.title"></b>
-                    </div>
-                    <div class="card-content">
-                        <div class="price center-align white-text">
-                            <span class="amount" translate="pricing.offers.standard.price"></span>
-                            <span class="currency">€</span><br>
-                            <span class="period" translate="pricing.offers.standard.period"></span><br>
-                            <span translate="pricing.offers.standard.desc"></span>
-                            <p>&nbsp;</p>
-                        </div>
-                        <h5 class="colorSecondary-text" translate="pricing.offers.standard.detail.title"></h5>
-                        <div class="divider white container"></div>
-                        <ul class="left-align" style="padding-left: 30%;">
-                            <li translate="pricing.offers.standard.detail.line1"></li>
-                            <li translate="pricing.offers.standard.detail.line2"></li>
-                            <li translate="pricing.offers.standard.detail.line3"></li>
-                            <li translate="pricing.offers.standard.detail.line4"></li>
-                            <li translate="pricing.offers.standard.detail.line5"></li>
-                        </ul>
-
-                        <a class="btn btn-flat btn-large waves-effect waves-light colorAccent white-text"
-                           href="#/signupStart" translate="pricing.subscribe-btn">
-                        </a>
-                        <p>&nbsp;</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <p class="center-align colorMain-text" translate="pricing.team-subscribe"></p>
 </div>
 <div class="pricing colorSecondary white-text">
     <div class="container center-align">
@@ -57,4 +21,45 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="colorMain-text">
+    <div class="center-align">
+        <div class="row container">
+            
+            <div class="col s12">
+                <div class="">
+                    <div class="card-title colorAccent-text">
+                        <h3><b translate="pricing.offers.standard.title"></b></h3>
+                    </div>
+                    <div class="card-content colorMain white-text">
+                        <div class="price center-align white-text">
+                            <h3>{{'pricing.offers.standard.price' | translate}} € </h3>
+                            <h4>{{'pricing.offers.standard.period' | translate}}</h4>
+                        </div>
+                        
+                        <h6>
+                        <a class="btn btn-flat btn-large waves-effect waves-light colorAccent white-text"
+                           href="#/signupStart" translate="pricing.subscribe-btn">
+                        </a>
+                        </h6>
+                        
+                        <div class="divider white container"></div>
+                        <h5 translate="pricing.offers.standard.detail.title"></h5>
+                        
+                        <ul class="left-align" style="padding-left: 30%;">
+                            <li translate="pricing.offers.standard.detail.line1"></li>
+                            <li translate="pricing.offers.standard.detail.line2"></li>
+                            <li translate="pricing.offers.standard.detail.line3"></li>
+                            <li translate="pricing.offers.standard.detail.line4"></li>
+                            <li translate="pricing.offers.standard.detail.line5"></li>
+                        </ul>
+
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <p class="center-align colorMain-text" translate="pricing.team-subscribe"></p>
 </div>
