--- a/src/app/modules/commons/users/signup/signupStart.html
+++ b/src/app/modules/commons/users/signup/signupStart.html
@@ -1,23 +1,20 @@
-<div class="container">
-    <!-- body start-->
-    <div class="row"></div>
+<div class="colorMain-text">
+    <div class="section no-pad-bot hero-signup">
+        <div class="colorBckgModal white-text center-align">
+            <h1 class="title" translate="landing.main-title"></h1>
+
+            <h4 class="title" translate="landing.sub-title"></h4>
+
+            <!-- <a class="waves-effect waves-light btn" translate="landing.manual-btn" href="#/how"></a>-->
+        </div>
+    </div>
 
     <!-- Entete -->
     <div class="row">
-        <div class="col s12">
-            <div class="row colorMain white-text center">
-                <div class="col s1">
-                    <br/>&nbsp;
-                </div>
-                <div class="col s10">
-                    <br/>
-                    <h5 translate="headerSignup.label"></h5>
-                    <br/>
-                </div>
-                <div class="col s1">
-                    <br/>&nbsp;
-                </div>
-            </div>
+        <div class="col s12 colorSecondary white-text center">
+
+            <h3 translate="headerSignup.label"></h3>
+
         </div>
     </div>
 
@@ -143,9 +140,9 @@
                 <div class="row center">
                     <div class="col s12">
                         <a href="" ng-click="cancelSignup()"
-                           class="modal-action modal-close waves-effect waves-red btn btn-s red" style="max-width:50%"
+                           class="modal-action modal-close waves-effect waves-white btn btn-s colorAccent" style="max-width:50%"
                            translate="commons.buttons.cancel" tabindex="9"></a>
-                        <button type="submit" class="btn btn-s waves-effect waves-red  green darken-1"
+                        <button type="submit" class="btn btn-s waves-effect waves-white colorSecondary"
                                 style="max-width:50%"
                                 translate="commons.buttons.validate" ng-disabled="signupForm.$invalid" tabindex="8" ></button>
                     </div>
