--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,13 +1,12 @@
 <div id="index-banner" class="colorMain-text">
     <div class="section no-pad-bot hero">
-        <div class="row colorBckgModal white-text center-align">
-            <h1 class="col s12 title" translate="landing.main-title"></h1>
+        <div class="colorBckgModal white-text center-align">
+            <h1 class="title" translate="landing.main-title"></h1>
 
-            <h4 class="col s12 title" translate="landing.sub-title" style="margin-bottom: 50px"></h4>
+            <h4 class="title" translate="landing.sub-title"></h4>
 
             <!-- <a class="waves-effect waves-light btn" translate="landing.manual-btn" href="#/how"></a>-->
         </div>
-        <div class="row">&nbps;</div>
     </div>
 
 
@@ -72,7 +71,7 @@
         </div>
     </div>
     
-    <div class="green lighten-2">
+    <div class="colorSecondary">
         <div class="section white-text">
             <h4 class="center-align" translate="landing.area-4.title"></h4>
 
@@ -88,8 +87,8 @@
         </div>
     </div>
     
-    <div class="colorMain">
-        <div class="section container white-text">
+    <div>
+        <div class="section container">
             <!--   Icon Section   -->
             <div class="row">
                 <div class="col s12 m6">
